# agrifoodpy-shocks

./: .gitignore  LICENSE  README.md  pyproject.toml
agrifoodpy_shocks/crises/: environmental.py  geopolitical.py  socioeconomic.py  supply.py
agrifoodpy_shocks/resilience/: __init__.py  engine.py
agrifoodpy_shocks/tests/: test_process_shocks.py
examples/: README.md  ffc_pipeline_with_shocks.yaml  ffc_pipleine_with_shocks.ipynb  test_shocks_registration.ipynb  test_shocks_registration.yaml  test_shocks_registration_many_years.ipynb  test_shocks_registration_many_years.yaml  test_shocks_registration_without_years.ipynb  test_shocks_registration_without_years.yaml
examples/data/: generate_test_data.py  test_data.nc  test_data_high_dimensional.nc  test_data_without_years.nc
